php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #35091 SoapClient leaks memory
Submitted: 2005-11-03 19:52 UTC Modified: 2005-11-07 11:11 UTC
From: paul at paulbutcher dot com Assigned: dmitry (profile)
Status: Closed Package: SOAP related
PHP Version: 5CVS-2005-11-04 (snap) OS: *
Private report: No CVE-ID: None
 [2005-11-03 19:52 UTC] paul at paulbutcher dot com
Description:
------------
SoapClient doesn't seem to clean up after itself when garbage collected. It leaks something around 4K each time. Tested on both Windows and Linux.

Reproduce code:
---------------
<?php
while(true) {
    new SoapClient("test.wsdl");
}
?>


Expected result:
----------------
Assuming that I understand the PHP Garbage Collector (and it's possible that I don't - I'm struggling to find any good documentation on exactly how I should expect it to behave - any pointers very welcome!), I would expect the memory usage of this script to be constant.

Actual result:
--------------
The memory usage increases very quickly (growing to several hundred megabytes in less than a minute).

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2005-11-04 12:37 UTC] sniper@php.net
Dmitry, can you check this out please.

 [2005-11-07 11:11 UTC] dmitry@php.net
Fixed in CVS HEAD and PHP_5_1.
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 16:00:02 2026 UTC