Fixed bug #35091 (SoapClient leaks memory)